...
            iconText = "T",
            iconTextSize = 20.sp,
            onClick = actions.onFontWeight,
        ),
        ReadStyleShortcut(
            titleRes = R.string.text_font,
            iconText = "Aa",
            iconTextSize = 20.sp,
            onClick = actions.onFont,
        ),
        ReadStyleShortcut(
            titleRes = R.string.text_indent,
            iconText = "⇄",
...
